syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

import "info/ProjectInfo.proto";
import "info/EmployeeInfo.proto";
import "Group.proto";

package com.bht.pim.proto.projects;
option java_generic_services = true;
option java_multiple_files = true;

message Project {
    ProjectInfo projectInfo = 1;
    repeated employees.EmployeeInfo members = 2;
}

message ProjectList {
    repeated Project projects = 1;
}

message ProjectNumbers {
    repeated int64 projectNumbers = 1;
}

service ProjectService {
    rpc getProjectById (google.protobuf.Int64Value) returns (Project);
    rpc addNewProject (Project) returns (google.protobuf.BoolValue);
    rpc editProject (Project) returns (google.protobuf.BoolValue);
    rpc deleteProject (google.protobuf.Int64Value) returns (google.protobuf.BoolValue);

    rpc getProjectList (google.protobuf.Empty) returns (ProjectList);
    rpc getProjectNumbers (google.protobuf.Empty) returns (ProjectNumbers);
}