syntax = "proto3";

import "Group.proto";
import "Project.proto";

package com.bht.pim.proto.group;
option java_multiple_files = true;

message GroupInfo {
    Group group = 1;
    repeated project.Project enrolledProjects = 2;
}

message GroupId {
    int64 id = 1;
}

message Success {
    bool isSuccess = 1;
}

service GroupService {
    rpc getGroupById (GroupId) returns (GroupInfo);
    rpc addNewGroup (Group) returns (Success);
}